roles/auth/authelia/files/ingress-authelia.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-authelia
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`auth.mccannclan.family`)
    kind: Rule
    services:
    - name: authelia
      port: 9091
    middlewares:
    - https-only
  #  - chain-authelia
  #  - chain-basic-auth
    - chain-no-auth
  tls:
    store:
      name: default
